<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.MindSpore.FullscreenContainer"
    tools:context=".ui.experience.ExperienceFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/experience_head"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/experience_head_title"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/experience_head_subtitle"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_head_experience"
            android:text="@string/experience_head_button"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff2f4f5" />

</LinearLayout>