<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_me"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="@drawable/bg_title_blue"
        android:gravity="center"
        android:text="@string/me_title"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/title_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/title_me"
        android:background="@color/divider_gray" />

    <TextView
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/me_user_protocol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/me_user_agreement"
        android:textColor="@color/main_tab_text_checked"
        android:textSize="11sp" />

    <ScrollView
        android:layout_above="@+id/me_user_protocol"
        android:layout_below="@+id/title_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_me_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingTop="29dp"
                android:paddingBottom="29dp">

                <TextView
                    style="@style/MeInfoTextLeftStyle"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/me_share"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/me_share_title" />

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/me_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_me_thumbsup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="29dp"
                android:paddingBottom="29dp">

                <TextView
                    style="@style/MeInfoTextLeftStyle"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/me_up"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/me_up_title" />

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/me_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_me_official"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="29dp"
                android:paddingBottom="29dp">

                <TextView
                    style="@style/MeInfoTextLeftStyle"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/me_official"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/me_official_title" />

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/me_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_me_official_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="29dp"
                android:paddingBottom="29dp">

                <TextView
                    style="@style/MeInfoTextLeftStyle"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/me_official_code"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/me_official_code_title" />

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/me_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_me_qa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="29dp"
                android:paddingBottom="29dp">

                <TextView
                    style="@style/MeInfoTextLeftStyle"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/me_qa"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/me_qa_title" />

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="12dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/me_go" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_me_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="29dp"
                android:paddingBottom="29dp">

                <TextView
                    style="@style/MeInfoTextLeftStyle"
                    android:layout_marginStart="20dp"
                    android:drawableStart="@drawable/me_version"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/me_version_title" />

                <TextView
                    android:id="@+id/me_vision"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:textColor="@color/main_tab_text_uncheck"
                    android:textSize="13sp"
                    tools:text="v2.10.0" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>

