<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.poetry.PoetryPosterActivity">

    <RelativeLayout
        android:id="@+id/w_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/w_back"
            android:layout_width="50dp"
            android:layout_height="18dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/w_title"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:gravity="center"
            android:text="@string/title_intelligent_poetry"
            android:textColor="@color/text_black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/w_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/w_linear"
        android:background="@color/divider_gray" />

    <com.mindspore.himindspore.ui.poetry.PoetryView
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/w_view"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="40dp"
            android:layout_weight="1"
            android:background="@drawable/item_bg_blue_rect"
            android:text="@string/poem_save_poster"
            android:textColor="@color/main_tab_text_checked"
            android:textSize="18sp" />

        <Button
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:id="@+id/share_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/save_btn"
            android:background="@drawable/item_bg_blue_rect"
            android:text="@string/poem_share_poster"
            android:textColor="@color/main_tab_text_checked"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>